# xmake_example

./: .gitignore  CMakeLists.txt  clean.sh  main.cpp  rebuild.sh  rect_selector.cpp  rect_selector.h  run.sh  xmake.lua
docs/: xmake.lua参考.txt  xmake找不到头文件怎么办.md  遇到的问题.md
libs/RectSelector/: xmake.lua
libs/RectSelector/include/RectSelector/: rect_selector.h
libs/RectSelector/src/: rect_selector.cpp
libs/myMath/include/myMath/: baseFunc.h
mylibs/RectSelector/src/: rect_selector.cpp
src/: main.cpp
运行库制作/myMath/: README.txt  xmake.lua
运行库制作/myMath/src/: baseFunc.cpp
运行库制作/myMath/test/: test.cpp  xmake.lua
